tests/data/midterm/midterm/2018011/Q3/submission_1/.vocStudentSubmissionReport.txt

[Executed at: Wed Mar 14 0:36:23 PDT 2018]

Traceback (most recent call last):
  File "/home/ccc_v1_c79523__48809/asn24778_45/asn24779_1/asnlib/submission.py", line 21, in <module>
    imported=getattr(__import__(work_package, fromlist=fun_name), f)
  File "./q3_work.py", line 7
    area of the square A1= s1^2
          ^
SyntaxError: invalid syntax

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/ccc_v1_c79523__48809/asn24778_45/asn24779_1/asnlib/submission.py", line 23, in <module>
    print('Error: importing '+fun_name+'.')
TypeError: Can't convert 'list' object to str implicitly
Command exited with non-zero status 1
